-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 6.0.2, Qt Creator 9.0.1
-
-
3eb60d80e (master)
I'm building a .so file for Android using QtCreator. My .pro file has:
TEMPLATE = lib
CONFIG += shared
When I compile, the .so file is correctly generated. However, just after that, QtCreaor reports and error: "make: *** No rule to make target 'install'. Stop.".
That's expected, there is nothing to install. This should not produce an error.
- relates to
-
QTCREATORBUG-26357 Build fails
-
- Closed
-
-
QTCREATORBUG-26401 Qt 5.15.2 Qt Creator 4.15.1 Cannot build any android static library with windows as host
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-26980 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 463735,8 | Android: Skip "Make Install" and "Build APK" if not ProductType::App | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |